HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordDefaultInit/Source/Main.uv
//! Rejected record construction specimen for missing default field initializers.

public record NonDefaultPayload {
    public value: i32
}

public procedure recordDefaultInitReference() -> NonDefaultPayload {
    return NonDefaultPayload()
}
